Setup game, rows, cells adding functionalities and add renderer to view them all

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
 	<title>Game of life - Jakaria Blaine</title>
 </head>
 <body>
+	<div class="container">
+	</div>
 	<script src="/bundle.js"></script>
 </body>
 </html>
