--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
 <body>
 	<div class="container">
 	</div>
+	<div id="controls">
+		<button id="start_btn">Start</button>
+		<button id="stop_btn">Stop</button>
+	</div>
 	<script src="/bundle.js"></script>
 </body>
 </html>
