Add more cells and update styles

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 	<div id="controls">
 		<button id="start_btn">Start</button>
 		<button id="stop_btn">Stop</button>
+		<button id="reset_btn">Reset</button>
 	</div>
 	<script src="/bundle.js"></script>
 </body>
